# indexer

./: Cargo.toml
src/: case_insensitive_string.rs  lib.rs  main.rs  tokenizer.rs
src/tokenizer/: lexer.rs  text.rs  xml.rs
