[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "indexer"

[lib]
name = "indexer"

[dependencies]
clap = { version = "4.1.7", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
xml-rs = "0.8.4"
